--- a/static/css/chex.css
+++ b/static/css/chex.css
@@ -9,3 +9,15 @@
 .panel{
     margin-bottom:50px;
 }
+
+
+
+a:focus, a:active, 
+button::-moz-focus-inner,
+input[type="reset"]::-moz-focus-inner,
+input[type="button"]::-moz-focus-inner,
+input[type="submit"]::-moz-focus-inner,
+select::-moz-focus-inner,
+input[type="file"] > input[type="button"]::-moz-focus-inner {
+    outline : 0;
+}
