add sticky footer to template

--- a/static/css/chex.css
+++ b/static/css/chex.css
@@ -1,4 +1,12 @@
 
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  margin-bottom: 60px;
+}
 
 .label{
     display:block;
@@ -27,6 +35,35 @@ textarea.form-control  {
     min-height:150px;
     padding:10;
 }
+
+
+
+
+/* Sticky footer styles
+-------------------------------------------------- */
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: #f5f5f5;
+}
+
+body > .container {
+  padding: 10px 15px 0;
+}
+.container .text-muted {
+  margin: 20px 0;
+}
+
+.footer > .container {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+
 
 a:focus, a:active, 
 button::-moz-focus-inner,
