working on rendering answer

--- a/static/css/chex.css
+++ b/static/css/chex.css
@@ -36,6 +36,14 @@ textarea.form-control  {
     padding:10;
 }
 
+.form-group ul{
+    list-style:none;
+}
+
+.form-group input[type=radio] + label{
+    margin-left: 15px;
+    font-weight:normal;
+}
 
 
 
