--- a/static/css/chex.css
+++ b/static/css/chex.css
@@ -34,11 +34,15 @@ body {
 /*  Panel selection */
 
 .panel-selection{
-    margin-bottom:0;
-    height:500px;
-    overflow-y:auto;
+    min-height:500px;
 }
 
+.panel-selection-main{
+    margin-bottom:0;
+    height:400px;
+    max-height:400px;
+    overflow-y:auto;
+}
 
 .panel-selection .icons > a{
     margin-right:10px;
