--- a/static/css/chex.css
+++ b/static/css/chex.css
@@ -106,6 +106,11 @@ textarea.form-control  {
     text-decoration:none;
 }
 
+form.disabled {
+    pointer-events: none;
+    opacity: 0.8;
+}
+
 /* Sticky footer styles
 -------------------------------------------------- */
 
